--- a/Project4_dictionaries/index.html
+++ b/Project4_dictionaries/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <script src="JS/main.js"></script>
+    <p id="Dictionary" onclick="my_Dictionary()"><p>
     <title>
         <!-- TEXT -->
     </title>
