--- a/Project2_functions/index.html
+++ b/Project2_functions/index.html
@@ -4,7 +4,7 @@
         <script src="JS/main.js"></script>
     </head>
     <body>-
-        <button onclick= "My_First_Function()" id="Green Text">
+        <button onclick= "My_First_Function()" id="Green_Text">
             Click me!
         </button>
     </body>
