--- a/Project2_functions/index.html
+++ b/Project2_functions/index.html
@@ -3,7 +3,7 @@
     <head>
         <script src="JS/main.js"></script>
     </head>
-    <body>-
+    <body>
         <button onclick= "My_First_Function()" id="Green_Text">
             Click me!
         </button>
