--- a/Project2_functions/index.html
+++ b/Project2_functions/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src="JS/main.js"></script>
+        <script src="concatenating_a_string.js"></script>
     </head>
     <body>
         <button onclick= "My_First_Function()" id="Green_Text">
