--- a/Project2_functions/index.html
+++ b/Project2_functions/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="JS/main.js"></script>
+        <script src="JS/main.js"></script> 
         <script src="concatenating_a_string.js"></script>
+        <script src="window_alert_method.js"></script>
+        <script src="main.js"></script>
     </head>
     <body>
         <button onclick= "My_First_Function()" id="Green_Text">
             Click me!
+                
         </button>
     </body>
 </html>
