--- a/Project2_functions/index.html
+++ b/Project2_functions/index.html
@@ -9,7 +9,8 @@
     <body>
         <button onclick= "My_First_Function()" id="Green_Text">
             Click me!
-                
+        <button onclick= "My_Function()" id="Concatenate">  
+            Click me!     
         </button>
     </body>
 </html>
