--- a/Project8_string_methods/index.html
+++ b/Project8_string_methods/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <head>
+    <!--Links to Javascript file-->
     <script src="JS/main.js"></script>
     <title>
         <!-- TEXT -->
     </title>
 </head>
     <body>
+        <!--Creates butttons and matches IDs to Javascript file-->
         <p id="Precision"></p>
         <button onclick="precision_Method()">Click here</button>    
-<br>
+
         <p id="Numbers_to_string"></p>
         <button onclick="string_Method()">Click here</button>
 
         <p id="Concatenate"></p>
         <button onclick="full_Sentence()">Click here for a sentence.</button>
-        <p id="demo"></p>
+        
         <p id="demo"></p>
         <button onclick="to_slice()">Click here!</button>
     </body>
