--- a/Project10_loops_arrays/index.html
+++ b/Project10_loops_arrays/index.html
@@ -12,7 +12,8 @@
         <button onclick= "count_To_Ten() ">Click here to start.</button>   
         <p id="List_of_Instruments"></p>
         <button onclick= "for_Loop() ">Click here.</button>
-        <p id="demo"></p>
+        <p id="Car"></p>
+        <button onclick= "car_pics() ">Click here.</button>
         
     </body>
 </html>
